--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       body {
         font-family: sans-serif;
         background: #3498db;
-        width: 100%;
+        width: 100%%;
         text-align: center;
         margin: 20px 0px 20px 0px;
       }
@@ -27,13 +27,14 @@
         margin: 0 auto 0 auto;
         padding: 10px 0px 10px 0px;
       }
+      select,
       input[type='text'],
       input[type='password'] {
         background: #ecf0f1;
         border: #ccc 1px solid;
         border-bottom: #ccc 2px solid;
         padding: 8px;
-        width: 60%;
+        width: 60%%;
         color: #aaa;
         margin-top: 10px;
         font-size: 1em;
@@ -41,7 +42,7 @@
       }
       .btn {
         background: #2ecc71;
-        width: 50%;
+        width: 50%%;
         padding-top: 5px;
         padding-bottom: 5px;
         color: white;
@@ -56,10 +57,11 @@
   <body>
     <form action="/login" method="get" class="box">
       <h1>WiFi login credentials</h1>
-      <input type="text" placeholder="My WiFi SSID" name="ssid" required />
-
-      <br />
-
+      <select name="ssid" required>
+        <option value="" disabled selected>Select SSID from list</option>
+        %s
+      </select>
+      <br/>
       <input
         type="password"
         placeholder="WiFi Password"
